objects/Image.object
<CustomObject>
    <fields>
        <fullName>Alpha__c</fullName>
        <label>Alpha</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beta__c</fullName>
        <label>Beta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev1_Image__c</fullName>
        <label>Dev1 Image</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gamma__c</fullName>
        <label>Gamma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>